# scori

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  action.yml  badge.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: badge.yml  ci.yml  publish.yml
src/scori/: __init__.py  __main__.py  _types.py  config.py  fix.py  friction.py  golang.py  history.py  lockfile.py  npm.py  rust.py  sbom.py  scanner.py  stubdiff.py  summarise.py
tests/: conftest.py  test_config.py  test_fix.py  test_friction.py  test_golang.py  test_history.py  test_integration.py  test_lockfile.py  test_npm.py  test_rust.py  test_sbom.py  test_scanner.py  test_stubdiff.py
