[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scori"
version = "0.1.0"
description = "Software Composition Risk Intelligence — score the real cost of updating a dependency"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Paulo Estevao", email = "pestevao@scori.dev" }]
keywords = ["sca", "dependencies", "security", "risk", "score", "friction", "update"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "requests>=2.31",
  "rich>=13.0",
  "packaging>=24.0",
]

[project.urls]
Homepage = "https://github.com/pauloestevao795/scori"
Repository = "https://github.com/pauloestevao795/scori"
Issues = "https://github.com/pauloestevao795/scori/issues"
Changelog = "https://github.com/pauloestevao795/scori/blob/main/CHANGELOG.md"

[project.scripts]
scori = "scori.__main__:main"
# CLI v0.1 — available commands:
#   scori scan --path .
#   scori friction --path . [--format json|table|html]
# CLI v0.2+ (TODOs in code):
#   scori monitor
#   scori update --dry-run
#   scori report

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "pre-commit>=3.7",
  "responses>=0.25",
  "types-requests",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/scori --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/scori"]
