[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scori"
version = "1.1.1"
description = "Software Composition Risk Intelligence — score the real cost of updating a dependency"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Paulo Estevao", email = "pestevao@scori.dev" }]
keywords = ["sca", "dependencies", "security", "risk", "score", "friction", "update"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "requests>=2.32",
  "rich>=13.7",
  "packaging>=24.1",
]

[project.urls]
Homepage = "https://github.com/pauloestevao795/scori"
Repository = "https://github.com/pauloestevao795/scori"
Issues = "https://github.com/pauloestevao795/scori/issues"
Changelog = "https://github.com/pauloestevao795/scori/blob/main/CHANGELOG.md"

[project.scripts]
scori = "scori.__main__:main"
# CLI commands:
#   scori scan --path .
#   scori friction --path . [--format json|table|html] [--ci] [--threshold N]
#   scori monitor --path . [--watch] [--interval N]
#   scori update --path . [--dry-run|--apply|--rollback] [--max-friction LABEL]
#   scori report --path . [--format html|json] [--output FILE] [--ci]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "mypy>=1.11",
  "ruff>=0.8",
  "pre-commit>=3.8",
  "responses>=0.25",
  "types-requests",
  "reportlab>=4.5.1",
  "pip-audit>=2.10.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/scori --cov-report=term-missing -m 'not integration'"
markers = [
  "integration: requires network access; run with -m integration",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scori"]
